--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -8,7 +8,7 @@ https://templatemo.com/tm-552-video-catalog
 
 html {
 	scroll-behavior: smooth;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 }
 
 body {
