--- a/css/templatemo-video-catalog.css
+++ b/css/templatemo-video-catalog.css
@@ -14,7 +14,7 @@ html {
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'Ubuntu', sans-serif;
+	font-family: "Raleway", sans-serif;
 	font-size: 18px;
 	line-height: 2em;
 	overflow-x: hidden;
