--- a/ourcss/top-page.css
+++ b/ourcss/top-page.css
@@ -26,7 +26,7 @@
 
 /* main page div (has the background img, etc) */
 .main-page-div {
-	background-image: url("../img/mainphoto-3.png");
+	background-image: url("https://via.placeholder.com/150");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
@@ -59,7 +59,6 @@
 	margin: 10px;
 	cursor: pointer;
 	font-size: 2.2ch;
-
 }
 
 .nav-li a {
@@ -107,7 +106,7 @@
 	display: none;
 }
 
-@media screen and (max-width: 671px) {
+@media screen and (max-width: 804px) {
 	.navbar-div {
 		display: none;
 	}
@@ -117,10 +116,17 @@
 		width: var(--navbar-responsive-toggle-bar-width);
 		height: var(--navbar-responsive-toggle-bar-height);
 		margin: 8px;
+		/* margin-top: 1rem; */
+	}
+
+	#navbar-responsive-toggle {
+		margin-top: 0.4rem;
+		margin-right: 0.8rem;
 	}
 
 	.navbar-responsive-toggle-bar-1 {
 		transform: rotate(-45deg) translate(-8px, 7px);
+		background-color: black;
 		transition: all 0.3s ease;
 	}
 
@@ -132,8 +138,25 @@
 
 	.navbar-responsive-toggle-bar-3 {
 		transform: rotate(45deg) translate(-8px, -7px);
+		background-color: black;
 		transition: all 0.3s ease;
 	}
+
+	/* .navbar-responsive-toggle-bar-1-reverse {
+		transform: rotate(45deg) translate(-8px, 7px);
+		background-color: teal;
+		transition: all 0.3s ease;
+	}
+
+	.navbar-responsive-toggle-bar-2-reverse {
+		opacity: 1;
+	}
+
+	.navbar-responsive-toggle-bar-3-reverse {
+		transform: rotate(-45deg) translate(-8px, -7px);
+		background-color: teal;
+		transition: all 0.3s ease;
+	} */
 
 	#navbar-responsive-toggle {
 		display: block;
@@ -144,9 +167,9 @@
 
 	.navbar-div-responsive {
 		background-color: teal;
-		height: 100vh;
-		width: 100vw;
-		position: absolute;
+		height: 100%;
+		width: 100%;
+		position: fixed;
 		margin-bottom: 2rem;
 		z-index: 10;
 		right: 0;
@@ -160,7 +183,6 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-
 		margin: 2rem;
 		padding: 2rem;
 	}
