--- a/ourcss/top-page.css
+++ b/ourcss/top-page.css
@@ -177,14 +177,15 @@
 		animation-duration: 0.6s;
 	}
 
-	.nav-ul-responsive {
+	.nav-ul-responsive {	
 		list-style: none;
 		display: flex;
+		padding: 0;
+		height: 100%;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		margin: 2rem;
-		padding: 2rem;
+		
 	}
 
 	@keyframes open-nav {
